// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@mqs/react-server-components components <Card /> renders 1`] = `
<DocumentFragment>
  <div
    class="card shadow-xl card-normal test"
    data-testid="Card"
  >
    <figure>
      <img
        alt="test"
        src="/assets/images/test.jpg"
      />
    </figure>
    <div
      class="card-body"
      data-testid="CardBody"
    >
      <span
        class="card-title"
        data-testid="CardTitle"
      >
        Card Title
      </span>
      <p>
        children...
      </p>
    </div>
    <div
      class="card-actions"
      data-testid="CardActions"
    >
      <button
        class="btn btn-md"
        data-testid="Button"
        type="button"
      >
        Click Me
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Storyshots @mqs/react-server-components/components/Card Card Compact Example 1`] = `
<div
  className="card shadow-xl card-compact"
  data-testid="Card"
>
  <figure>
    <img
      alt="Kittens"
      src="http://placekitten.com/1000/400"
    />
  </figure>
  <div
    className="card-body"
    data-testid="CardBody"
  >
    <span
      className="card-title"
      data-testid="CardTitle"
    >
      Kittens!
    </span>
    <p>
      Kittens learn to walk when they are around three weeks old.
    </p>
    <div
      className="card-actions justify-end"
      data-testid="CardActions"
    >
      <button
        className="btn btn-primary btn-md"
        data-testid="Button"
        type="button"
      >
        See More Kittens
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots @mqs/react-server-components/components/Card Card Example 1`] = `
<div
  className="card shadow-xl card-normal"
  data-testid="Card"
>
  <figure>
    <img
      alt="Kittens"
      src="http://placekitten.com/1000/400"
    />
  </figure>
  <div
    className="card-body"
    data-testid="CardBody"
  >
    <span
      className="card-title"
      data-testid="CardTitle"
    >
      Kittens!
    </span>
    <p>
      Kittens learn to walk when they are around three weeks old.
    </p>
    <div
      className="card-actions justify-end"
      data-testid="CardActions"
    >
      <button
        className="btn btn-primary btn-md"
        data-testid="Button"
        type="button"
      >
        See More Kittens
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots @mqs/react-server-components/components/Card Card With Action On Top Example 1`] = `
<div
  className="card shadow-xl card-normal"
  data-testid="Card"
>
  <div
    className="card-body"
    data-testid="CardBody"
  >
    <div
      className="card-actions justify-end"
      data-testid="CardActions"
    >
      <button
        className="btn btn-square btn-sm"
        data-testid="Button"
        type="button"
      >
        <svg
          className="fill-none stroke-current stroke-1"
          data-testid="IconClose"
          fill="currentColor"
          stroke="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 18L18 6M6 6l12 12"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
          />
        </svg>
      </button>
    </div>
    <p>
      We are using cookies for no reason.
    </p>
  </div>
</div>
`;

exports[`Storyshots @mqs/react-server-components/components/Card Card With Badge Example 1`] = `
<div
  className="card shadow-xl card-normal"
  data-testid="Card"
>
  <figure>
    <img
      alt="Kittens"
      src="http://placekitten.com/1000/400"
    />
  </figure>
  <div
    className="card-body"
    data-testid="CardBody"
  >
    <span
      className="card-title"
      data-testid="CardTitle"
    >
      Kittens!
      <div
        className="badge badge-secondary"
      >
        Cute!
      </div>
    </span>
    <p>
      Kittens learn to walk when they are around three weeks old.
    </p>
    <div
      className="card-actions justify-end"
      data-testid="CardActions"
    >
      <button
        className="btn btn-primary btn-md"
        data-testid="Button"
        type="button"
      >
        See More Kittens
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots @mqs/react-server-components/components/Card Card With Bottom Image Example 1`] = `
<div
  className="card shadow-xl card-normal"
  data-testid="Card"
>
  <div
    className="card-body"
    data-testid="CardBody"
  >
    <span
      className="card-title"
      data-testid="CardTitle"
    >
      Kittens!
    </span>
    <p>
      Kittens learn to walk when they are around three weeks old.
    </p>
    <div
      className="card-actions justify-end"
      data-testid="CardActions"
    >
      <button
        className="btn btn-primary btn-md"
        data-testid="Button"
        type="button"
      >
        See More Kittens
      </button>
    </div>
  </div>
  <figure>
    <img
      alt="Kittens"
      src="http://placekitten.com/1000/400"
    />
  </figure>
</div>
`;

exports[`Storyshots @mqs/react-server-components/components/Card Card With Centered Content Example 1`] = `
<div
  className="card shadow-xl card-normal"
  data-testid="Card"
>
  <figure>
    <img
      alt="Kittens"
      src="http://placekitten.com/1000/400"
    />
  </figure>
  <div
    className="card-body items-center text-center"
    data-testid="CardBody"
  >
    <span
      className="card-title"
      data-testid="CardTitle"
    >
      Kittens!
    </span>
    <p>
      Kittens learn to walk when they are around three weeks old.
    </p>
    <div
      className="card-actions"
      data-testid="CardActions"
    >
      <button
        className="btn btn-primary btn-md"
        data-testid="Button"
        type="button"
      >
        See More Kittens
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots @mqs/react-server-components/components/Card Card With Custom Color Example 1`] = `
<div
  className="card shadow-xl card-normal bg-primary text-primary-content"
  data-testid="Card"
>
  <div
    className="card-body"
    data-testid="CardBody"
  >
    <span
      className="card-title"
      data-testid="CardTitle"
    >
      Kittens!
    </span>
    <p>
      Kittens learn to walk when they are around three weeks old.
    </p>
    <div
      className="card-actions justify-end"
      data-testid="CardActions"
    >
      <button
        className="btn btn-md"
        data-testid="Button"
        type="button"
      >
        See More Kittens
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots @mqs/react-server-components/components/Card Card With Glass Example 1`] = `
<div
  className="card shadow-xl card-normal glass"
  data-testid="Card"
>
  <figure>
    <img
      alt="Kittens"
      src="http://placekitten.com/1000/400"
    />
  </figure>
  <div
    className="card-body"
    data-testid="CardBody"
  >
    <span
      className="card-title"
      data-testid="CardTitle"
    >
      Kittens!
    </span>
    <p>
      Kittens learn to walk when they are around three weeks old.
    </p>
    <div
      className="card-actions justify-end"
      data-testid="CardActions"
    >
      <button
        className="btn btn-primary btn-md"
        data-testid="Button"
        type="button"
      >
        See More Kittens
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots @mqs/react-server-components/components/Card Card With Image On Side Example 1`] = `
<div
  className="card shadow-xl card-side card-normal"
  data-testid="Card"
>
  <figure>
    <img
      alt="Kittens"
      src="http://placekitten.com/250/500"
    />
  </figure>
  <div
    className="card-body"
    data-testid="CardBody"
  >
    <span
      className="card-title"
      data-testid="CardTitle"
    >
      Kittens!
    </span>
    <p>
      Kittens learn to walk when they are around three weeks old.
    </p>
    <div
      className="card-actions justify-end"
      data-testid="CardActions"
    >
      <button
        className="btn btn-primary btn-md"
        data-testid="Button"
        type="button"
      >
        See More Kittens
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots @mqs/react-server-components/components/Card Card With Image Overlay Example 1`] = `
<div
  className="card shadow-xl image-full card-normal"
  data-testid="Card"
>
  <figure>
    <img
      alt="Kittens"
      src="http://placekitten.com/1000/400"
    />
  </figure>
  <div
    className="card-body"
    data-testid="CardBody"
  >
    <span
      className="card-title"
      data-testid="CardTitle"
    >
      Kittens!
    </span>
    <p>
      Kittens learn to walk when they are around three weeks old.
    </p>
    <div
      className="card-actions justify-end"
      data-testid="CardActions"
    >
      <button
        className="btn btn-primary btn-md"
        data-testid="Button"
        type="button"
      >
        See More Kittens
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots @mqs/react-server-components/components/Card Card With Neutral Color Example 1`] = `
<div
  className="card shadow-xl card-normal bg-neutral text-neutral-content"
  data-testid="Card"
>
  <div
    className="card-body"
    data-testid="CardBody"
  >
    <span
      className="card-title"
      data-testid="CardTitle"
    >
      Kittens!
    </span>
    <p>
      Kittens learn to walk when they are around three weeks old.
    </p>
    <div
      className="card-actions justify-end"
      data-testid="CardActions"
    >
      <button
        className="btn btn-primary btn-md"
        data-testid="Button"
        type="button"
      >
        See More Kittens
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots @mqs/react-server-components/components/Card Card With No Image Example 1`] = `
<div
  className="card shadow-xl card-normal"
  data-testid="Card"
>
  <div
    className="card-body"
    data-testid="CardBody"
  >
    <span
      className="card-title"
      data-testid="CardTitle"
    >
      Kittens!
    </span>
    <p>
      Kittens learn to walk when they are around three weeks old.
    </p>
    <div
      className="card-actions justify-end"
      data-testid="CardActions"
    >
      <button
        className="btn btn-primary btn-md"
        data-testid="Button"
        type="button"
      >
        See More Kittens
      </button>
    </div>
  </div>
</div>
`;
